添加Dockerignore文件，优化Docker构建过程；重构docker-compose.yml，合并开发和生产环境配置，简化服务启动；新增Dockerfile，采用单阶段构建，提升构建效率；实现核心论文服务，支持三级缓存策略；完善API路由和健康检查功能；更新README文档，提供项目概述和快速开始指南；添加测试脚本，确保系统功能完整性。

--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,8 @@ pydantic-settings==2.1.0
 # HTTP客户端
 httpx==0.25.2
 aiohttp==3.9.1
+# Semantic Scholar SDK
+semanticscholar==0.8.4
 
 # 缓存和数据库
 redis==5.0.1
