--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   # Redis缓存服务
   redis:
@@ -31,8 +29,6 @@ services:
       - NEO4J_AUTH=neo4j/password
       - NEO4J_PLUGINS=["apoc"]
       - NEO4J_dbms_security_procedures_unrestricted=apoc.*
-      - NEO4J_dbms_memory_heap_initial_size=512m
-      - NEO4J_dbms_memory_heap_max_size=2G
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "cypher-shell", "-u", "neo4j", "-p", "password", "RETURN 1"]
@@ -40,20 +36,16 @@ services:
       timeout: 10s
       retries: 3
 
-  # 开发环境API服务
-  api-dev:
+  # API服务（默认生产环境配置）
+  api:
     build:
       context: .
-      dockerfile: Dockerfile.dev
-    container_name: paper_parser_api_dev
+      dockerfile: Dockerfile
+    container_name: paper_parser_api
     ports:
       - "8000:8000"
-    volumes:
-      - .:/app
-      - /app/__pycache__
     environment:
-      - DEBUG=true
-      - RELOAD=true
+      - DEBUG=false
       - REDIS_URL=redis://redis:6379/0
       - NEO4J_URI=bolt://neo4j:7687
       - NEO4J_USER=neo4j
@@ -66,13 +58,14 @@ services:
       neo4j:
         condition: service_healthy
     restart: unless-stopped
-    profiles: ["dev"]
+    # 移除profiles，默认启动
+
 
   # Celery Worker (高优先级)
   celery-worker-high:
     build:
       context: .
-      dockerfile: Dockerfile.dev
+      dockerfile: Dockerfile
     container_name: paper_parser_celery_high
     command: celery -A app.tasks.celery_app worker -Q high_priority -c 4 --loglevel=info
     volumes:
@@ -96,7 +89,7 @@ services:
   celery-worker-medium:
     build:
       context: .
-      dockerfile: Dockerfile.dev
+      dockerfile: Dockerfile
     container_name: paper_parser_celery_medium
     command: celery -A app.tasks.celery_app worker -Q medium_priority -c 2 --loglevel=info
     volumes:
@@ -120,7 +113,7 @@ services:
   celery-flower:
     build:
       context: .
-      dockerfile: Dockerfile.dev
+      dockerfile: Dockerfile
     container_name: paper_parser_flower
     command: celery -A app.tasks.celery_app flower --port=5555
     ports:
