添加.gitignore文件以排除不必要的文件；更新docker-compose.yml以优化Redis和Neo4j服务的内存使用和健康检查配置；新增真实文献测试脚本，验证Paper Parser系统的核心功能；完善S2 API客户端，增加错误处理和日志记录；更新核心论文服务以处理不同类型的API错误；添加多个测试脚本以确保系统稳定性和功能完整性。

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,13 +7,21 @@ services:
       - "6379:6379"
     volumes:
       - redis_data:/data
-    command: redis-server --appendonly yes
+    command: redis-server --appendonly yes --save 60 1000
     restart: unless-stopped
+    # 优化内存使用
+    deploy:
+      resources:
+        limits:
+          memory: 512M
+        reservations:
+          memory: 128M
     healthcheck:
       test: ["CMD", "redis-cli", "ping"]
-      interval: 10s
-      timeout: 3s
-      retries: 3
+      interval: 5s
+      timeout: 2s
+      retries: 2
+      start_period: 10s
 
   # Neo4j图数据库
   neo4j:
@@ -29,12 +37,28 @@ services:
       - NEO4J_AUTH=neo4j/password
       - NEO4J_PLUGINS=["apoc"]
       - NEO4J_dbms_security_procedures_unrestricted=apoc.*
+      # 优化Neo4j启动性能
+      - NEO4J_dbms_memory_heap_initial__size=256m
+      - NEO4J_dbms_memory_heap_max__size=512m
+      - NEO4J_dbms_memory_pagecache_size=256m
+      - NEO4J_dbms_jvm_additional=-XX:+UseG1GC -XX:+UnlockExperimentalVMOptions -XX:+UseZGC
+      - NEO4J_dbms_default__database=neo4j
     restart: unless-stopped
+    # 资源限制
+    deploy:
+      resources:
+        limits:
+          memory: 1G
+          cpus: '2.0'
+        reservations:
+          memory: 512M
+          cpus: '1.0'
     healthcheck:
       test: ["CMD", "cypher-shell", "-u", "neo4j", "-p", "password", "RETURN 1"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
+      interval: 15s
+      timeout: 5s
+      retries: 2
+      start_period: 60s
 
   # API服务（默认生产环境配置）
   api:
