更新.gitignore以排除报告和测试相关文件；修改Redis客户端以支持降级为无缓存模式的错误处理；新增健康检查脚本和全面端到端测试套件，验证系统核心功能和性能，确保系统稳定性。

--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,19 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 app/api/v1/__pycache__/paper.cpython-310.pyc
+
+
+# 报告
+*report*.txt
+*report*.json
+*test*.txt
+*test*.json
+*test*.log
+*test*.html
+*test*.xml
+*test*.csv
+*test*.xlsx
+*test*.pdf
+*test*.docx
+*test*.doc
+*test*.pptx
