新增`paper_relations`标记以修复性能测试收集错误；优化性能测试用例，增加上游不可用时的跳过处理，避免误报失败；更新测试文档以说明测试分类和运行方式。

--- a/pytest.ini
+++ b/pytest.ini
@@ -16,6 +16,7 @@ markers =
     paper_details: Paper详情相关测试
     paper_citations: Paper引用相关测试
     paper_references: Paper参考文献相关测试
+    paper_relations: Paper关系查询相关测试
     paper_search: Paper搜索相关测试
     paper_batch: Paper批量获取相关测试
     cache: 缓存操作相关测试
