新增ARQ轻量任务队列支持，优化核心论文服务的异步处理逻辑，增强缓存和数据库操作的可靠性；更新配置文件以支持搜索后台入库设置，完善文档说明ARQ Worker的启动方式。

--- a/env.example
+++ b/env.example
@@ -29,3 +29,7 @@ LOG_LEVEL=INFO
 # 开发配置
 DEBUG=true
 RELOAD=true
+
+# 搜索后台入库（命中缓存时后台刷新Top N条）
+ENABLE_SEARCH_BACKGROUND_INGEST=true
+SEARCH_BACKGROUND_INGEST_TOP_N=3
