--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -76,6 +76,8 @@ services:
       - NEO4J_PASSWORD=password
       - CELERY_BROKER_URL=redis://redis:6379/1
       - CELERY_RESULT_BACKEND=redis://redis:6379/2
+      - ENABLE_SEARCH_BACKGROUND_INGEST=true
+      - SEARCH_BACKGROUND_INGEST_TOP_N=3
     depends_on:
       redis:
         condition: service_healthy
@@ -108,6 +110,28 @@ services:
         condition: service_healthy
     restart: unless-stopped
     profiles: ["dev", "celery"]
+
+  # ARQ Worker（轻量任务队列）
+  arq-worker:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: paper_parser_arq
+    command: arq app.tasks.worker.WorkerSettings
+    volumes:
+      - .:/app
+    environment:
+      - REDIS_URL=redis://redis:6379/0
+      - NEO4J_URI=bolt://neo4j:7687
+      - NEO4J_USER=neo4j
+      - NEO4J_PASSWORD=password
+    depends_on:
+      redis:
+        condition: service_healthy
+      neo4j:
+        condition: service_healthy
+    restart: unless-stopped
+    profiles: ["arq"]
 
   # Celery Worker (中优先级)
   celery-worker-medium:
