--- a/requirements.txt
+++ b/requirements.txt
@@ -13,10 +13,9 @@ semanticscholar==0.8.4
 # 缓存和数据库
 redis==5.0.1
 neo4j==5.14.1
+aiosqlite==0.19.0
 
 # 异步任务队列
-celery==5.3.4
-kombu==5.3.4
 arq==0.26.1
 
 # 数据处理
